HelloUltraviolet/Fixtures/RejectedSource/Parallelism/GpuIntrinsicOutside/Source/Main.uv
//! Rejected structured-parallelism specimen for GPU intrinsics outside GPU context.

public procedure gpuIntrinsicOutsideReference() -> usize {
    return gpu_linear_id()
}
